# tutorials

./: howcani.txt  howcani_2  nbc_questions  problem_solving_squad.txt  prompts  templib.R
script/mlp/: README.md  agile.Rmd  buildspec-code.yml  main_describers_container.py  main_describers_sparkjob.py  pyproject.toml
script/mlp/describers/: api.rst  index.rst
script/mlp/docs/: conf.py  index.rst
script/mlp/docs/_examples/: advanced_hpo.yml  custom_label.yml  ensembled_model.yml  model_with_transformers.yml  multiple_month_hpo.yml  simple_hpo.yml  single_model.yml
script/mlp/ell/describers/: __init__.py  api.py  compat.py  evaluator.py
script/mlp/ell/describers/averagers/: __init__.py  aggregator_abc.py  ensemble_box.py  reason_rollup.py
script/mlp/ell/describers/description/: __init__.py  abstract_describer.py  lime.py  lime_tree.py  shap.py
script/mlp/ell/describers/utils/: __init__.py  utils.py  (+2 more)
script/mlp/ell/predictions/: __init__.py  api.py  compat.py  errors.py  model.py
script/mlp/infrastructure/: clients.json
script/mlp/infrastructure/dev/: .terraform.lock.hcl  main.tf
script/mlp/infrastructure/prod/: .terraform.lock.hcl  main.tf
script/mlp/predictions/: index.rst
script/mlp/predictions/api/: api.rst  classification.rst  ensembling.rst  farming.rst  feature_selection.rst  hpo.rst  index.rst  transformation.rst
script/mlp/predictions/config/: feature_selection.rst  hpo.rst  index.rst  model.rst
script/mlp/tests/: conftest.py  hardcoded_paths.py  helper.py  test_explainer_evaluator.py
script/mlp/tests/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
script/mlp/tests/test_calibration/: test_pandas_calibration.py
script/mlp/tests/test_classification/: test_pandas_classifier.py
script/mlp/tests/test_e2e/: data.py  test_e2e_classification.py  test_e2e_explanation.py  test_e2e_hpo.py  testcases.py
script/mlp/tests/test_ensembling/: test_base_ensembler.py
script/mlp/tests/test_feature_selection/: test_greedy_subset_scorer.py
script/mlp/tests/test_hpo/: test_hpo_abc.py  test_ray_hpo.py  test_utils.py
script/mlp/tests/test_transformation/: test_categorical_decomposer.py  test_input_filtering.py  test_parallel.py  test_target_encoder.py
script/mlp/tests/test_utils/: test_parquet_dataset_loader.py  test_utils.py
(+741 files in other folders)
